@@ -2412,3 +2412,5 @@ Version 17
 		when they are closed, unlike displays.  Thanks to Ahmed Elmolla
 		<aelmolla@gmu.edu>
 	Made Display3D.setRasterizationMode(...) and Display3D.setCullingMode(...) public.
+	Reindented
+	Added the ability to force precision in Display2D.
